using System.Collections;
using System.Collections.Generic;
using UnityEngine;

abstract public class InputMode : MonoBehaviour{
    // Update is called once per frame
    virtual public void init(){

    }
    
    virtual public void inputUpdate(){
        
    }
}
